- Added Encription of Chat option to relay (req mhash & mcrypt)
- Added ignore setting for those users who maybe not want in your gc but want to still have relay with other org
- Added option of not having other org prefix shown
- Added Raid Status to !online
- Changed link inside !online to use !alts if alts arnt shows in whois (can be changed to use !alts by setting too)

-------------
Version 0.6.1
-------------
- Fixed a bug in buddy list handling of the Roster core.
- setcraft now has the option to set it as None, Update by gerborg
- Moved ServerList into conf folder and Checked US server List, 9 Updated, 6 Added
- Logon Spam now has Setting as to what user level they have to be for logon spam, Default Member Only
- Fixed Command Links for Guild in AoC
- Enabled BotStatistics for AoC, Fixed Dim Issue, Fixed Output issue
- Fixed Issue with !admin del <group> <name> not working when name has number
- Fixed issue of Guest always being added to notify regardless of settings
- Fixed bug were user removed from notify stay in online
- Updated All US and some EU Servers with New names and ip's
- Added sending of shutdown/restart reason
- Now allows password to be entered on loading of StartBot.php


-------------
Version 0.6.0
-------------
- Fixed bug in OnlineDisplay, correctly displaying otherbots and memberlist again.
- Fixed AOChat to work with modifications done by FC to AoC chatserver.


-------------
Version 0.5.6
-------------
- Fixed Search Issues with PB Module.
- Added Option of useing cURL for getting site data changable in !set tools.
- Online now shows Guests and None members seperatly.
- Added function set_change_user() to settings module. This function is used in save() to hand over the changing user to any hooked modules.
- Settings callback function now gots an additional new parameter, $name of the changing user if set, "" otherwise.
- Adapted Tools module to use the new functionality. 