@@ -15,6 +15,8 @@ Version 0.6.2
 - Added option of not having other org prefix shown
 - Added Raid Status to !online
 - Changed link inside !online to use !alts if alts arnt shows in whois (can be changed to use !alts by setting too)
+- Added Option to view all alts inc the name you used inside alts Blob
+- Added a Trigger in alts module for a check in points module
 
 -------------
 Version 0.6.1
